--- a/ricette/templates/ricette/index.html
+++ b/ricette/templates/ricette/index.html
@@ -1,1 +1,24 @@
-<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+{% load static %}
+<!doctype html>
+<html lang="it-IT">
+
+<head>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <meta charset="utf-8" />
+    <title>Ingredienti</title>
+</head>
+
+<body>
+    {% if ingredienti %}
+    <ul class="list-group">
+        {% for ingrediente in ingredienti %}
+        <li class="list-group-item list-group-item-action"><a href="/ricette/{{ ingrediente.codice }}/">{{ ingrediente.descrizione }}</a></li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>Nessun ingrediente inserito.</p>
+    {% endif %}
+</body>
+
+</html>
