--- a/ricette/templates/ricette/ingredienti.html
+++ b/ricette/templates/ricette/ingredienti.html
@@ -6,25 +6,25 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <meta charset="utf-8" />
-    <title>Ricette</title>
+    <title>Ingredienti</title>
 </head>
 
 <body>
     <div class="container">
         <div class="row mt-2">
-            <h3>Ricette</h3>
+            <h3>Ingredienti</h3>
         </div>
 
         <div class="row mt-2">
             <div>
-                {% if ricette %}
+                {% if ingredienti %}
                 <ul class="list-group">
-                    {% for ricetta in ricette %}
+                    {% for ingrediente in ingredienti %}
                     <li class="list-group-item list-group-item-action"><a href="/ingredienti/{{ ingrediente.codice }}/">{{ingrediente.codice}} - {{ingrediente.descrizione}}</a></li>
                     {% endfor %}
                 </ul>
                 {% else %}
-                <p>Nessuna ricetta inserita.</p>
+                <p>Nessun ingrediente inserito.</p>
                 {% endif %}
             </div>
         </div>
