--- a/ricette/templates/ricette/index.html
+++ b/ricette/templates/ricette/index.html
@@ -14,13 +14,14 @@
         <div class="row mt-2">
             <h3>Ricette</h3>
         </div>
+        <a class="btn btn-primary float-end" href="/ricette/aggiungi/" role="button">Aggiungi Ricetta</a>
 
         <div class="row mt-2">
             <div>
                 {% if ricette %}
                 <ul class="list-group">
                     {% for ricetta in ricette %}
-                    <li class="list-group-item list-group-item-action"><a href="/ingredienti/{{ ingrediente.codice }}/">{{ingrediente.codice}} - {{ingrediente.descrizione}}</a></li>
+                    <li class="list-group-item list-group-item-action"><a href="/ricetta/{{ ricetta.codice }}/">{{ricetta.codice}} - {{ricetta.descrizione}}</a></li>
                     {% endfor %}
                 </ul>
                 {% else %}
