--- a/ricette/templates/ricette/ingredienti.html
+++ b/ricette/templates/ricette/ingredienti.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    {% include 'ricette/header.html' %} 
     <div class="container">
         <div class="row mt-4">
             <h3>Ingredienti</h3>
