--- a/ricette/templates/ricette/ingredienti.html
+++ b/ricette/templates/ricette/ingredienti.html
@@ -11,7 +11,7 @@
 
 <body>
     {% include 'ricette/header.html' %} 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mt-4">
             <h3>Ingredienti</h3>
         </div>
