gestione tab attivo

--- a/ricette/templates/ricette/index.html
+++ b/ricette/templates/ricette/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    {% include 'ricette/header.html' %} 
+    {% include 'ricette/header.html' with page="home"%} 
     <div class="container-fluid">
         <div class="row mt-4">
             <h3>Ricette</h3>
