--- a/ricette/templates/ricette/header.html
+++ b/ricette/templates/ricette/header.html
@@ -10,10 +10,10 @@
             <div class="navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav navbar-dark me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link {% if page == 'home' %} active{% endif %}" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item navbar-dark">
-                        <a class="nav-link" href="/ingredienti">Ingredienti</a>
+                        <a class="nav-link {% if page == 'ingredienti' %} active{% endif %}" href="/ingredienti">Ingredienti</a>
                     </li>
                 </ul>
             </div>
