--- a/ricette/templates/ricette/ingredienti.html
+++ b/ricette/templates/ricette/ingredienti.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    {% include 'ricette/header.html' %} 
+    {% include 'ricette/header.html' with page="ingredienti"%} 
     <div class="container-fluid">
         <div class="row mt-4">
             <h3>Ingredienti</h3>
