--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class="container">
+    {% include 'ricette/header.html' with page="home" %}
+    <div class="container-fluid">
         <div class="row mt-4">
             <h3>Aggiungi Ricetta</h3>
         </div>
