--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -2,6 +2,8 @@
 <!doctype html>
 <html lang="it-IT">
 
+<script src="{% static 'js/utils.js' %}"></script>
+
 <head>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="{% static 'js/bootstrap.js' %}"></script>
@@ -17,7 +19,7 @@
         </div>
 
         <div class="row mt-4">
-            <form method="post" class="row post-form" enctype="multipart/form-data">
+            <form id="form-container" method="post" class="row post-form" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="row col-12">
                     {% for field in ricetta_form %}
@@ -26,17 +28,25 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="row col-12 mt-4">
+                <div class="row col-12 mt-4 miscela-form">
                     {{ formset.management_form }}
                     {% for form in miscela_form %}
-                        {{ form.as_p }}
+                        <div class="col-3">
+                            {{ form.as_p }}
+                        </div>
                     {% endfor %}
                 </div>
+                <button type="button" id="add-ingrediente">Aggiungi Ingrediente</button>
                 <button class="btn btn-primary my-4" type="submit">Salva</button>
             </form>
         </div>
 
     </div>
+
+    <input type="hidden" name="form-TOTAL_FORMS" value="1" id="id_form-TOTAL_FORMS">
+    <input type="hidden" name="form-INITIAL_FORMS" value="0" id="id_form-INITIAL_FORMS">
+    <input type="hidden" name="form-MIN_NUM_FORMS" value="0" id="id_form-MIN_NUM_FORMS">
+    <input type="hidden" name="form-MAX_NUM_FORMS" value="20" id="id_form-MAX_NUM_FORMS">
 
 </body>
 
