--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -28,22 +28,22 @@
                     </div>
                     {% endfor %}
                 </div>
-                <div class="row mt-4 miscela-form">
+                <div class="row mt-4">
                     <div class="row">
-                        <table class="table">
+                        <table id="ingredienti-table" class="table">
                             <thead class="thead-dark">
                               <tr>
                                 <th scope="col">Ingrediente</th>
                                 <th scope="col">Dosaggio</th>
-                                <th scope="col">Ingrediente</th>
+                                <th scope="col">Costo</th>
                               </tr>
                             </thead>
-                            <tbody>
+                            <tbody class="miscela-form">
                                 {{ formset.management_form }}
                                 {% for form in miscela_form %}
                                 <td class="sel-ingrediente">{{ form.ingrediente }}</td>
                                 <td>{{ form.dosaggio }}</td>
-                                <td>@ {{ ingredienti }}</td>
+                                <td id="costo"></td>
                                 {% endfor %}
                             </tbody>
                             </table>
