--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -43,7 +43,7 @@
                                 {% for form in miscela_form %}
                                 <td class="sel-ingrediente">{{ form.ingrediente }}</td>
                                 <td>{{ form.dosaggio }}</td>
-                                <td id="costo"></td>
+                                <td id="id_form-{{forloop.counter0}}-costo"></td>
                                 {% endfor %}
                             </tbody>
                             </table>
