--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -46,7 +46,7 @@
                                     {{ formset.management_form }}
                                     {% for form in miscela_form %}
                                     <td class="sel-ingrediente">{{ form.ingrediente }}</td>
-                                    <td>{{ form.dosaggio }}</td>
+                                    <td class="inp-dosaggio">{{ form.dosaggio }}</td>
                                     <td id="id_form-{{forloop.counter0}}-zuccheri"></td>
                                     <td id="id_form-{{forloop.counter0}}-grassi"></td>
                                     <td id="id_form-{{forloop.counter0}}-acqua"></td>
