--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -29,17 +29,17 @@
                     {% endfor %}
                 </div>
                 <div class="row mt-4">
-                    <div class="row">
-                        <table id="ingredienti-table" class="table">
-                            <thead class="thead-dark">
-                              <tr>
-                                <th scope="col">Ingrediente</th>
-                                <th scope="col">Dosaggio</th>
-                                <th scope="col">Zuccheri</th>
-                                <th scope="col">Grassi</th>
-                                <th scope="col">Acqua</th>
-                                <th scope="col">Costo</th>
-                              </tr>
+                    <div class="table-responsive">
+                        <table id="ingredienti-table" class="table table-hover">
+                            <thead class="table-dark">
+                                <tr>
+                                    <th scope="col">Ingrediente</th>
+                                    <th scope="col">Dosaggio</th>
+                                    <th scope="col">Zuccheri</th>
+                                    <th scope="col">Grassi</th>
+                                    <th scope="col">Acqua</th>
+                                    <th scope="col">Costo</th>
+                                </tr>
                             </thead>
                             <tbody id="miscela-body">
                                 <tr class="miscela-row">
@@ -54,6 +54,16 @@
                                     {% endfor %}
                                 </tr>
                             </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th scope="row">Totale</th>
+                                    <td>dsaff</td>
+                                    <td>dsadas</td>
+                                    <td>dsad</td>
+                                    <td>dsad</td>
+                                    <td>dsdsaad</td>
+                                </tr>
+                            </tfoot>
                             </table>
                     </div>
                 </div>
