aggiunto elimina ricetta

--- a/ricette/templates/ricette/index.html
+++ b/ricette/templates/ricette/index.html
@@ -15,14 +15,26 @@
         <div class="row mt-4">
             <h3>Ricette</h3>
         </div>
-        <a class="btn btn-primary float-end" href="/ricette/aggiungi/" role="button">Aggiungi Ricetta</a>
+        <div class="d-flex mt-2 mb-4">
+            <a class="btn btn-primary float-end" href="/ricette/aggiungi/" role="button">Aggiungi Ricetta</a>
+        </div>
 
         <div class="row mt-2">
             <div>
                 {% if ricette %}
                 <ul class="list-group">
                     {% for ricetta in ricette %}
-                    <li class="list-group-item list-group-item-action"><a href="/ricetta/{{ ricetta.codice }}/">{{ricetta.codice}} - {{ricetta.descrizione}}</a></li>
+                    <li class="list-group-item list-group-item-action">
+                        <div class="d-flex">
+                            <a href="/ricetta/{{ ricetta.codice }}/">{{ricetta.codice}} - {{ricetta.descrizione}}</a>
+                            <div class="ms-auto">
+                                <form action="{% url 'elimina_ricetta' codice=ricetta.codice %}" method="post">
+                                    {% csrf_token %}
+                                    <button class="btn btn-danger" type="submit">x</i></button>
+                                </form>
+                            </div>
+                        </div>
+                    </li>
                     {% endfor %}
                 </ul>
                 {% else %}
