--- a/ricette/templates/ricette/aggiungi-ricetta.html
+++ b/ricette/templates/ricette/aggiungi-ricetta.html
@@ -73,13 +73,13 @@
                             <tfoot>
                                 <tr>
                                     <th scope="row">Totale</th>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td class="percentuale"></td>
+                                    <td class="percentuale"></td>
+                                    <td class="percentuale"></td>
+                                    <td class="percentuale"></td>
+                                    <td class="percentuale"></td>
+                                    <td class="percentuale"></td>
+                                    <td class="valuta"></td>
                                 </tr>
                             </tfoot>
                             </table>
