--- a/ricette/templates/ricette/header.html
+++ b/ricette/templates/ricette/header.html
@@ -6,7 +6,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid">
-            <span class="navbar-dark navbar-brand mb-0 h1">Doretto</span>
+            <span class="navbar-dark navbar-brand mb-0 h1">Gelati</span>
             <div class="navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav navbar-dark me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
